tests/parser/good/type_annot.hel
// @name type_annot
// @phase parser
// @expect success

x = (1 + 2): i32;
fn_type: fn(i32, i32) -> i32 = (a: i32, b: i32): i32 { a + b }
