tests/parser/bad/bad_lambda.hel
// @name bad_lambda
// @phase parser
// @expect error

f = (x: i32): i32;
